# poetry-test-lfs

./: README.md  pyproject.toml
test-lfs/: main.py
