[tool.poetry]
name = "poetry-test-lfs"
version = "0.1.0"
description = "Poetry package that contains a file stored with git-lfs."
authors = ["Arktur <arktur@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
